--- a/config.yml
+++ b/config.yml
@@ -1,8 +1,8 @@
 baseURL: https://main--inquisitive-bunny-06f364.netlify.app/
 languageCode: ja
 # theme: hugo-theme-salt
-title: Hugoブログテーマ「Salt」
-copyright: © 2021 my_name
+title: aaaaiuuああああああ
+copyright: © 2023 naaaaak
 author:
   name: my_name
   email: my_email@example.com
